@@ -75,8 +75,9 @@ static const char *syms[] = {
 	"acct_gather_interconnect_p_conf_values",
 };
 
-static slurm_acct_gather_interconnect_ops_t ops;
-static plugin_context_t *g_context = NULL;
+static slurm_acct_gather_interconnect_ops_t *ops = NULL;
+static plugin_context_t **g_context = NULL;
+static int g_context_num = -1;
 static pthread_mutex_t g_context_lock =	PTHREAD_MUTEX_INITIALIZER;
 static bool init_run = false;
 static bool acct_shutdown = true;
@@ -86,9 +87,10 @@ static pthread_t watch_node_thread_id = 0;
 static void *_watch_node(void *arg)
 {
 	int type = PROFILE_NETWORK;
+	int i;
 
 #if HAVE_SYS_PRCTL_H
-	if (prctl(PR_SET_NAME, "acctg_ib", NULL, NULL, NULL) < 0) {
+	if (prctl(PR_SET_NAME, "acctg_intrcnt", NULL, NULL, NULL) < 0) {
 		error("%s: cannot set my name to %s %m", __func__, "acctg_ib");
 	}
 #endif
@@ -99,7 +101,11 @@ static void *_watch_node(void *arg)
 	while (init_run && acct_gather_profile_test()) {
 		/* Do this until shutdown is requested */
 		slurm_mutex_lock(&g_context_lock);
-		(*(ops.node_update))();
+		for (i = 0; i < g_context_num; i++) {
+			if (!g_context[i])
+				continue;
+			(*(ops[i].node_update))();
+		}
 		slurm_mutex_unlock(&g_context_lock);
 
 		slurm_mutex_lock(&acct_gather_profile_timer[type].notify_mutex);
@@ -117,31 +123,49 @@ extern int acct_gather_interconnect_init(void)
 {
 	int retval = SLURM_SUCCESS;
 	char *plugin_type = "acct_gather_interconnect";
-	char *type = NULL;
+	char *full_plugin_type = NULL;
+	char *last = NULL, *plugin_entry, *type = NULL;
 
-	if (init_run && g_context)
+	if (init_run && (g_context_num >= 0))
 		return retval;
 
 	slurm_mutex_lock(&g_context_lock);
 
-	if (g_context)
+	if (g_context_num >= 0)
 		goto done;
 
-	type = slurm_get_acct_gather_interconnect_type();
+	full_plugin_type = slurm_get_acct_gather_interconnect_type();
+	g_context_num = 0; /* mark it before anything else */
+	plugin_entry = full_plugin_type;
+	while ((type = strtok_r(plugin_entry, ",", &last))) {
+		xrealloc(ops, sizeof(slurm_acct_gather_interconnect_ops_t) *
+			 (g_context_num + 1));
+		xrealloc(g_context, (sizeof(plugin_context_t *) *
+				     (g_context_num + 1)));
+		if (xstrncmp(type, "acct_gather_interconnect/", 25) == 0)
+			type += 25; /* backward compatibility */
+		type = xstrdup_printf("%s/%s", plugin_type, type);
+		info("%d = %s", g_context_num, type);
+		g_context[g_context_num] = plugin_context_create(
+			plugin_type, type, (void **)&ops[g_context_num],
+			syms, sizeof(syms));
+		if (!g_context[g_context_num]) {
+			error("cannot create %s context for %s",
+			      plugin_type, type);
+			xfree(type);
+			retval = SLURM_ERROR;
+			break;
+		}
 
-	g_context = plugin_context_create(
-		plugin_type, type, (void **)&ops, syms, sizeof(syms));
-
-	if (!g_context) {
-		error("cannot create %s context for %s", plugin_type, type);
-		retval = SLURM_ERROR;
-		goto done;
+		xfree(type);
+		g_context_num++;
+		plugin_entry = NULL; /* for next iteration */
 	}
 	init_run = true;
 
 done:
 	slurm_mutex_unlock(&g_context_lock);
-	xfree(type);
+	xfree(full_plugin_type);
 	if (retval == SLURM_SUCCESS)
 		retval = acct_gather_conf_init();
 
@@ -151,20 +175,34 @@ done:
 
 extern int acct_gather_interconnect_fini(void)
 {
-	int rc = SLURM_SUCCESS;
+	int rc2, rc = SLURM_SUCCESS;
+	int i;
 
 	slurm_mutex_lock(&g_context_lock);
-	if (g_context) {
-		init_run = false;
+	init_run = false;
 
-		if (watch_node_thread_id) {
-			pthread_cancel(watch_node_thread_id);
-			pthread_join(watch_node_thread_id, NULL);
-		}
-
-		rc = plugin_context_destroy(g_context);
-		g_context = NULL;
+	if (watch_node_thread_id) {
+		pthread_cancel(watch_node_thread_id);
+		pthread_join(watch_node_thread_id, NULL);
 	}
+
+	for (i = 0; i < g_context_num; i++) {
+		if (!g_context[i])
+			continue;
+
+		rc2 = plugin_context_destroy(g_context[i]);
+		if (rc2 != SLURM_SUCCESS) {
+			debug("%s: %s: %s", __func__,
+			      g_context[i]->type,
+			      slurm_strerror(rc2));
+			rc = SLURM_ERROR;
+		}
+	}
+
+	xfree(ops);
+	xfree(g_context);
+	g_context_num = -1;
+
 	slurm_mutex_unlock(&g_context_lock);
 
 	return rc;
@@ -179,8 +217,7 @@ extern int acct_gather_interconnect_startpoll(uint32_t frequency)
 		return SLURM_ERROR;
 
 	if (!acct_shutdown) {
-		error("acct_gather_interconnect_startpoll: "
-		      "poll already started!");
+		error("%s: poll already started!", __func__);
 		return retval;
 	}
 
@@ -189,17 +226,16 @@ extern int acct_gather_interconnect_startpoll(uint32_t frequency)
 	freq = frequency;
 
 	if (frequency == 0) {   /* don't want dynamic monitoring? */
-		debug2("acct_gather_interconnect dynamic logging disabled");
+		debug2("%s: dynamic logging disabled", __func__);
 		return retval;
 	}
 
 	/* create polling thread */
 	slurm_attr_init(&attr);
-	if (pthread_create(&watch_node_thread_id, &attr, &_watch_node, NULL)) {
-		debug("acct_gather_interconnect failed to create _watch_node "
-		      "thread: %m");
-	} else
-		debug3("acct_gather_interconnect dynamic logging enabled");
+	if (pthread_create(&watch_node_thread_id, &attr, &_watch_node, NULL))
+		debug("%s: failed to create _watch_node thread: %m", __func__);
+	else
+		debug3("%s: dynamic logging enabled", __func__);
 	slurm_attr_destroy(&attr);
 
 	return retval;
@@ -209,23 +245,48 @@ extern int acct_gather_interconnect_startpoll(uint32_t frequency)
 extern void acct_gather_interconnect_g_conf_options(
 	s_p_options_t **full_options, int *full_options_cnt)
 {
+	int i;
+
 	if (acct_gather_interconnect_init() < 0)
 		return;
-	(*(ops.conf_options))(full_options, full_options_cnt);
+
+	slurm_mutex_lock(&g_context_lock);
+	for (i = 0; i < g_context_num; i++) {
+		if (!g_context[i])
+			continue;
+		(*(ops[i].conf_options))(full_options, full_options_cnt);
+	}
+	slurm_mutex_unlock(&g_context_lock);
 }
 
 extern void acct_gather_interconnect_g_conf_set(s_p_hashtbl_t *tbl)
 {
+	int i;
+
 	if (acct_gather_interconnect_init() < 0)
 		return;
 
-	(*(ops.conf_set))(tbl);
+	slurm_mutex_lock(&g_context_lock);
+	for (i = 0; i < g_context_num; i++) {
+		if (!g_context[i])
+			continue;
+		(*(ops[i].conf_set))(tbl);
+	}
+	slurm_mutex_unlock(&g_context_lock);
 }
 
 extern void acct_gather_interconnect_g_conf_values(void *data)
 {
+	int i;
+
 	if (acct_gather_interconnect_init() < 0)
 		return;
 
-	(*(ops.conf_values))(data);
+	slurm_mutex_lock(&g_context_lock);
+	for (i = 0; i < g_context_num; i++) {
+		if (!g_context[i])
+			continue;
+		(*(ops[i].conf_values))(data);
+	}
+	slurm_mutex_unlock(&g_context_lock);
 }
