@@ -13,6 +13,7 @@ documents those changes that are of interest to users and administrators.
     order to pass switch information between clusters with different switch
     types.
  -- Switch naming of acct_gather_infiniband to acct_gather_interconnect
+ -- Make it so you can "stack" the interconnect plugins
 
 * Changes in Slurm 17.02.0rc2
 ==============================
